fixing spacing between button at the top

--- a/components/shared/TransparentNavbar.scss
+++ b/components/shared/TransparentNavbar.scss
@@ -211,6 +211,8 @@ fieldset[disabled]
 .navbar {
     padding-top: 0.625rem;
     padding-bottom: 0.625rem;
+    padding-left: 100px;
+    padding-right: 30px;
     min-height: 53px;
     margin-bottom: 20px;
     box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.15); }
@@ -388,7 +390,9 @@ fieldset[disabled]
     background-color: transparent !important;
     box-shadow: none;
     color: #FFFFFF;
-    padding-top: 20px !important; }
+    padding-top: 20px !important; 
+    margin-left: 5%;
+}
 .navbar.bg-white:not(.navbar-transparent) a:not(.dropdown-item):not(.btn) {
     color: #2c2c2c; }
 .navbar.bg-white:not(.navbar-transparent) a:not(.dropdown-item):not(.btn).disabled {
