--- a/public/scss/global/_now-ui-icons.scss
+++ b/public/scss/global/_now-ui-icons.scss
@@ -18,7 +18,9 @@
     text-transform: none;
     /* Better Font Rendering */
     -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale; }
+    -moz-osx-font-smoothing: grayscale; 
+    left: -3px;
+}
 
 /*------------------------
   change icon size
